Alignment Fixes

--- a/assets/css/demos.css
+++ b/assets/css/demos.css
@@ -24,14 +24,7 @@ button {
 	border-radius: 3px;
 	background: #E0E0E0;
 	border: #CCC 1px solid;
-}
-
-p{
-	line-height: 2em;
-	margin:0 0 20px;
-	text-align: center;
-}
-
+} 
 hr{
 	border: 0;
 	border-bottom: #CCC 2px solid;
